# rizz

./: Cargo.toml  README.md  SPEC.md  TODO.archive.md  TODO.md  dprint.json  resources.md
.github/workflows/: mdbook.yml
book/: book.toml
book/src/: SUMMARY.md  introduction.md
book/src/appendix/: grammar.md  reserved.md  stdlib-reference.md
book/src/embedding/: builtins.md  driving.md  errors.md  overview.md  values.md  worked-example.md
book/src/getting-started/: first-program.md  installation.md
book/src/idioms/: idioms.md  patterns.md  performance.md
book/src/language/: collections.md  control-flow.md  documentation.md  errors.md  evaluation.md  functions.md  macros.md  modules.md  refs.md  special-forms.md  stdlib.md  syntax.md  values.md
book/theme/: rizz-highlight.js
src/: cli.rs  consts.rs  lib.rs  main.rs  parser.rs  prelude.rs  repl.rs
src/evaluator/: env.rs  error.rs  eval.rs  mod.rs  types.rs  value.rs
src/parser/: error.rs  mod.rs  parse.rs  peeker.rs  position.rs  scanner.rs
src/prelude/: _.lisp  _.rz  array.rs  collections.rs  cons.rs  eq.rs  exn.rs  map.rs  meta.rs  mod.rs  numbers.rs  ref_.rs  str.rs
src/runtime/: env.rs  error.rs  eval.rs  mod.rs  native.rs  rt.rs  value.rs
tests/: e2e.rs  open.rs
