[package]
name = "rizz"
version = "0.1.3"
authors = ["zjom"]
edition = "2024"
license = "Unlicense"
repository = "https://github.com/zjom/rizz"
description = "rust lisp"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
im = "15.1.0"
ordered-float = "5.3.0"
thiserror = "2.0.18"
