[package]
name = "rizz"
version = "0.7.1"
authors = ["zjom"]
edition = "2024"
license = "Unlicense"
repository = "https://github.com/zjom/rizz"
description = "rust lisp"

[dependencies]
anyhow = "1.0.102"
bon = "3.9.1"
clap = { version = "4.6.1", features = ["derive"], optional = true }
im = "15.1.0"
ordered-float = "5.3.0"
rustyline = { version = "18.0.0", optional = true, features = ["derive"] }
stacker = "0.1"
thiserror = "2.0.18"

[[bin]]
name = "rizz"
path = "src/main.rs"
required-features = ["cli"]

[features]
cli = ["dep:clap", "dep:rustyline"]
